# dteegen

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.build_deps  Makefile  README  README.md  add.c  embedding.bak.cpp  fs.h  main.cpp  parser.cpp  parser.h  pch.h
test/distributed_face_recognition/: CMakeLists.txt
test/distributed_face_recognition/insecure/: CMakeLists.txt  client.cpp  compute_node.cpp  file.cpp  file.h  img_receiver.cpp  img_receiver.h  server.cpp  test.cpp
test/distributed_face_recognition/insecure/ncnn_retinanet/: retinanet.cpp
test/distributed_face_recognition/insecure/ncnn_retinanet.rv/: mnet.25-opt.param.inc  retinanet.h
test/distributed_face_recognition/insecure/ncnn_retinanet.rv/ncnn/: layer_declaration.h  ncnn.pc  platform.h
test/distributed_face_recognition/insecure/ncnn_retinanet.rv/ncnn/layer/x86/: batchnorm_x86_fma.h  bias_x86_avx512.h  bnll_x86_avx.cpp  bnll_x86_fma.h  deconvolution_x86_avx512.h  deconvolutiondepthwise_x86_avx.h  deconvolutiondepthwise_x86_avx512.cpp  deconvolutiondepthwise_x86_avx512.h  deformableconv2d_x86_fma.cpp  deformableconv2d_x86_fma.h  eltwise_x86_avx512.h  elu_x86_avx.h  elu_x86_fma.h  gelu_x86_avx.h  gelu_x86_fma.h  gridsample_x86_avx.cpp  gridsample_x86_avx.h  gridsample_x86_avx512.h  groupnorm_x86_fma.cpp  interp_x86_avx512.h  layernorm_x86_avx512.h  lrn_x86_fma.h  mish_x86_avx.cpp  mish_x86_fma.h  multiheadattention_x86_avx.cpp  multiheadattention_x86_fma.h  scale_x86_avx512.h  selu_x86_avx512.h  selu_x86_fma.cpp  selu_x86_fma.h  shufflechannel_x86_avx512.cpp  swish_x86_avx.h  swish_x86_fma.cpp  yolov3detectionoutput_x86_fma.cpp
test/distributed_face_recognition/insecure/ncnn_retinanet.x64/: CMakeLists.txt
test/distributed_face_recognition/insecure/ncnn_retinanet.x64/ncnn/: platform.h
test/distributed_face_recognition/insecure/ncnn_retinanet/ncnn/: platform.h
test/distributed_face_recognition/secure/: embedding.cpp  embedding.h  mobilefacenet.param  mobilefacenet.param.inc
test/distributed_face_recognition/secure/secure_include/: CMakeLists.txt
test/distributed_face_recognition/secure/secure_include/ncnn/: platform.h
test/distributed_face_recognition/secure/secure_include/ncnn.rv/: simplemath.h
test/distributed_face_recognition/secure/secure_include/ncnn.x64/: Makefile
test/distributed_face_recognition/secure/secure_include/ncnn.x64/layer/x86/: batchnorm_x86_avx.h  convolutiondepthwise_x86_avx.cpp  convolutiondepthwise_x86_avx.h  convolutiondepthwise_x86_fma.h  deconvolution_x86_avx.cpp  deconvolution_x86_avx512.cpp  deconvolution_x86_fma.h  deconvolutiondepthwise_x86_fma.cpp  deformableconv2d_x86_avx.cpp  deformableconv2d_x86_avx512.h  eltwise_x86_avx.h  elu_x86_avx512.cpp  elu_x86_avx512.h  gelu_x86_fma.cpp  gridsample_x86_avx512.cpp  gridsample_x86_fma.cpp  gridsample_x86_fma.h  hardswish_x86_avx.h  interp_x86_avx512.cpp  interp_x86_fma.cpp  interp_x86_fma.h  layernorm_x86_avx.h  layernorm_x86_fma.cpp  lrn_x86_avx512.cpp  lrn_x86_avx512.h  mish_x86_avx512.h  multiheadattention_x86_avx.h  multiheadattention_x86_avx512.cpp  multiheadattention_x86_avx512.h  multiheadattention_x86_fma.cpp  pooling_x86_avx512.h  pooling_x86_fma.h  prelu_x86_avx.cpp  prelu_x86_avx512.h  prelu_x86_fma.cpp  roialign_x86_avx512.cpp  roialign_x86_fma.cpp  selu_x86_avx.cpp  selu_x86_avx512.cpp  shufflechannel_x86_avx512.h  (+5 more)
test/distributed_face_recognition/secure/secure_lib/: CMakeLists.txt
test/distributed_face_recognition_tf/insecure/: CMakeLists.txt  client.cpp  img_receiver.cpp  img_receiver.h  server.cpp  test.cpp
test/distributed_face_recognition_tf/insecure/ncnn_retinanet.rv/: CMakeLists.txt
test/distributed_face_recognition_tf/insecure/ncnn_retinanet.rv/ncnn/: cmake_install.cmake  layer_registry.h
test/distributed_face_recognition_tf/insecure/ncnn_retinanet.rv/ncnn/layer/x86/: bias_x86_avx.h  bnll_x86_avx.h  bnll_x86_avx512.h  bnll_x86_fma.cpp  clip_x86_avx.h  convolutiondepthwise_x86_avx512.cpp  convolutiondepthwise_x86_avx512.h  convolutiondepthwise_x86_fma.cpp  (+27 more)
test/distributed_tee_asr/secure/: CMakeLists.txt  decoder_jit_trace-pnnx.ncnn.id.h  sherpa-ncnn.cpp  sherpa-ncnn.h  wav.h
test/distributed_tee_asr/secure/secure_include/: CMakeLists.txt
test/distributed_tee_asr/secure/secure_include/ncnn.rv/: platform.h
test/distributed_tee_asr/secure/secure_include/sherpa-ncnn/csrc/: CMakeLists.txt  encoder_jit_trace-pnnx.ncnn.id.h  joiner_jit_trace-pnnx.ncnn.id.h  meta-data.cc  model.cc  model.h  poolingmodulenoproj.cc  recognizer.cc  sherpa-ncnn.cc  simpleupsample.cc  stack.cc  symbol-table.cc  symbol-table.h  tensorasstrided.cc  tokens.h  wave-reader.cc  wave-reader.h  zipformer-model.cc  zipformer-model.h
test/distributed_tee_asr/secure/secure_lib/: CMakeLists.txt
test/dteelua/insecure/: CMakeLists.txt  client.cpp  run_proxy.hpp  server.cpp
test/label_image/: CMakeLists.txt
test/label_image/insecure/: CMakeLists.txt  main.cc
test/label_image/secure/: CMakeLists.txt  image_data.inc  label_image.cc  label_image.h  labels.inc
test/label_image/secure/secure_include/: CMakeLists.txt
test/label_image/secure/secure_lib/: CMakeLists.txt  justworkaround.cc
test/qwen/: CMakeLists.txt
test/qwen/insecure/: CMakeLists.txt  chat.cpp  client.cpp  file_stub.cpp  file_stub.h  server.cpp
test/qwen/secure/: CMakeLists.txt  llm.cpp  llm.h  tlsf.cpp
test/qwen/secure/secure_include/: CMakeLists.txt
test/qwen/secure/secure_include/llama/common/: common.h  log.h
test/secret_test/insecure/: CMakeLists.txt  client.cpp  server.cpp
test/template_project_distributed_tee/insecure/: CMakeLists.txt  client.cpp  compute_node.cpp  server.cpp
test_project/: CMakeLists.txt  distribute_tee_framework.h
test_project/enclave/: add.c  hello.c
test_project/host/: add.h  hello.h  main.c
test_project/insecure/: main.c  strcat.c  strcat.h
test_project/secure/: add.c  hello.c
test_project/secure/include/: hello.h  some_math.h
test_project/secure/lib/: hello.c  math.c
test_project_distributed_tee/: CMakeLists.txt
test_project_distributed_tee/insecure/: client.cpp
(+171 files in other folders)
