cmake_minimum_required(VERSION 3.10)
project(test_project)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
list(FILTER SRC_FILES EXCLUDE REGEX "^.*CMakeFiles.*$")
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/secure/include)
add_executable(test_project ${SRC_FILES})
