cmake_minimum_required(VERSION 3.10)
project(test_project_cpp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(foonathan_memory REQUIRED)
add_executable(${PROJECT_NAME}_client insecure/client.cpp secure/add.cpp)
target_link_libraries(${PROJECT_NAME}_client distributed_tee fastcdr fastrtps foonathan_memory rt)
add_executable(${PROJECT_NAME}_server insecure/server.cpp secure/add.cpp)
target_link_libraries(${PROJECT_NAME}_server distributed_tee fastcdr fastrtps foonathan_memory rt)
